# Neural-Network-Handwriting-Recognizer

./: CMakeLists.txt  README.md  main.cpp
libs/: data.h  encoder.cpp  encoder.h  input_parser.cpp  input_parser.h  main.cpp  outputter.cpp  outputter.h
